--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 		<title>Znote</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<!--CSS-->
-		<link rel="stylesheet" href="/static/css/bootstrap.min.css">
-		<link rel="stylesheet" href="/static/css/bootstrap-responsive.min.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="shortcut icon" href="/static/image/favicon.png" type="image/png">
 		<link rel="stylesheet" href="/static/css/style.css">
@@ -28,7 +26,7 @@
 				
 <ul id="post-list">
 	<li>
-		<span><i>2013-04-24</i><i class="icon-double-angle-right"></i></span>
+		<span><i>2013-04-24</i> >> </span>
 		<span><a href="/posts/hello-world.html">Hello World</a><span>
 	</li>
 </ul>
