--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				
 <ul id="post-list">
 	<li>
-		<span><i>2013-04-24</i> >> </span>
+		<span><i>2013-04-24</i> &rsaquo;&rsaquo; </span>
 		<span><a href="/posts/hello-world.html">Hello World</a><span>
 	</li>
 </ul>
