--- a/pages/about.html
+++ b/pages/about.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>
-关于|
+关于 |
 Znote</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<!--CSS-->
@@ -10,6 +10,7 @@ Znote</title>
 		<link rel="shortcut icon" href="/static/image/favicon.png" type="image/png">
 		<link rel="stylesheet" href="/static/css/bootstrap.min.css">
 		<link rel="stylesheet" href="/static/css/style.css">
+		<link rel="stylesheet" href="/static/css/pygments.css">
 	</head>
 	<body>
 		<div id="container">
