--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 				
 <ul id="post-list">
 	<li>
+		<span><i>2013-04-26</i> &rsaquo;&rsaquo; </span>
+		<span><a href="/posts/how-to-highlight-code-in-markdown.html">使用Pygments高亮Markdown中的代码</a><span>
+	</li>
+	<li>
 		<span><i>2013-04-24</i> &rsaquo;&rsaquo; </span>
 		<span><a href="/posts/hello-world.html">Hello World</a><span>
 	</li>
