--- a/pages/about.html
+++ b/pages/about.html
@@ -30,7 +30,21 @@ Znote</title>
 				
 <article>
 	<section>
-		<p>未完，待续。。。</p>
+		<p><strong>我</strong></p>
+
+<p>80后IT男，混迹于帝都，从事着Unix C相关工作。</p>
+
+<p>喜欢C和Python，使用着Ubuntu和Windows。爱倒腾单片机，同时也喜欢捣鼓Web，还是1/4个木匠。有点精神分裂。</p>
+
+<p>联系方式：zqqf16[at]gmail[dot]com</p>
+
+<p><strong>博客</strong></p>
+
+<p>为了写博客前前后后换了多次阵地，从最开始的共享主机到后来的VPS，再到现在的Github，每次都没坚持太长时间。但愿在Gitbub上能挺过半年。</p>
+
+<p>本博客是由本人写的一个非常Ugly的Python脚本生成的、纯天然、无公害的、静态博客。如有兴趣，欢迎fork<a href="https://github.com/zqqf16/zqqf16.github.com">源码</a></p>
+
+<p>若无强调，本博客所有文章均属本人原创，转载时请注明出处。如有问题，欢迎留言。</p>
 
 	</section>
 </article>
