--- a/pages/about.html
+++ b/pages/about.html
@@ -29,6 +29,13 @@ Znote</title>
 			<section id="main">
 				
 <article>
+	<header>
+	<h1>关于</h1>
+		<span class="meta">
+			<time>2013-04-25</time>
+			| Tags: <a href="#">test</a>
+		</span>
+	</header>
 	<section>
 		<p><strong>我</strong></p>
 
@@ -62,6 +69,7 @@ Znote</title>
 </script>
 <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+    
 
 			</section>
 		</div>
