--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 				
 <ul id="post-list">
 	<li>
+		<span><i>2013-05-14</i> &rsaquo;&rsaquo; </span>
+		<span><a href="/posts/tucao-cloud.html">小饭馆与云计算</a><span>
+	</li>
+	<li>
 		<span><i>2013-05-13</i> &rsaquo;&rsaquo; </span>
 		<span><a href="/posts/tucao-major.html">吐槽一下专业</a><span>
 	</li>
