--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="stylesheet" href="/static/css/style.css" />
 	<link rel="stylesheet" href="/static/css/pygments.css" />
+	
+	<meta name="google-site-verification" content="FW_F-Ez0TldaAzvGUQ2kioxNpne-KbKCiSu1y_5bXTU" />
+
 </head>
 <body>
     <div id="container">
