--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="/static/css/pygments.css" />
 	
 	<meta name="google-site-verification" content="FW_F-Ez0TldaAzvGUQ2kioxNpne-KbKCiSu1y_5bXTU" />
+	<meta content="Zqqf16的个人BLog，记录我的生活、学习、以及心情。" name="description">
 
 </head>
 <body>
