--- a/pages/about.html
+++ b/pages/about.html
@@ -40,6 +40,8 @@ Znote</title>
 
 <p>不是五毛，也不是美分。爱生活，不反社会。崇尚实事求是。</p>
 
+<p>正在入门的摄影爱好者，用着宾得K-30+18-55mm。崇尚纯粹的摄影，反后期。 </p>
+
 <p>联系方式：zqqf16[at]gmail[dot]com</p>
 
 <p><strong>博客</strong></p>
