add google plus support

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	
 	<meta name="google-site-verification" content="FW_F-Ez0TldaAzvGUQ2kioxNpne-KbKCiSu1y_5bXTU" />
 	<meta content="Zqqf16的个人BLog，记录我的生活、学习、以及心情。" name="description">
+	<link href="https://plus.google.com/107911439044090080809" rel="publisher" />
 
 </head>
 <body>
