--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 <head>
 	<title>Znote</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
