--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Znote</title>
 	<link rel="stylesheet" href="/static/css/style.css" />
 	<link rel="stylesheet" href="/static/css/pygments.css" />
+	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://zqqf16.info/rss.xml" />
 	
 	<meta name="google-site-verification" content="FW_F-Ez0TldaAzvGUQ2kioxNpne-KbKCiSu1y_5bXTU" />
 	<meta content="Zqqf16的个人BLog，记录我的生活、学习、以及心情。" name="description">
