--- a/pages/about.html
+++ b/pages/about.html
@@ -29,13 +29,15 @@
             
 		<p><strong>我</strong></p>
 
-<p>80后IT男，现混迹于帝都。</p>
+<p>80后IT男，现混迹于帝都。在一个不大的公司当着一个辛勤的螺丝钉。</p>
 
-<p>喜欢C和Python，要么开发效率高，要么运行效率高，不喜欢不伦不类。</p>
+<p>白天用C（工作需要，正在转向Objective-c），晚上用Python。白天CVS，晚上Git。</p>
 
-<p>平时用Ubuntu，娱乐用Windows。</p>
+<p>曾经的Ubuntu桌面系统使用者，目前正在习惯Win+Ubuntu Server与Mac OS。</p>
 
-<p>爱好广泛，嵌入式、Web、硬件、软件、机械、电子、木工，都爱伸一脚。</p>
+<p>不懂云计算，不会大数据，也不懂O2O。</p>
+
+<p>爱好广泛，嵌入式、互联网，硬件、软件，机械、电子、木工，都爱伸一脚。</p>
 
 <p>会修自来水、热水器，也会修家电、自行车、防盗门……自己能干的就不求别人。</p>
 
