--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-cn">
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-	<title><function title at 0x10a80a938></title>
+	<title>穷折腾</title>
 	<link rel="stylesheet" href="/static/css/style.css" />
 	<link rel="stylesheet" href="/static/css/pygments.css" />
 	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://zqqf16.info/rss.xml" />
@@ -16,7 +16,7 @@
     <div id="container">
       <div id="main" role="main">
         <header>
-		<h1><function title at 0x10a80a2a8></h1>
+		<h1>穷折腾</h1>
 		</header>
 
      <nav>
