--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
+	<meta name="google-site-verification" content="FW_F-Ez0TldaAzvGUQ2kioxNpne-KbKCiSu1y_5bXTU" />
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 	<title>穷折腾</title>
 	<link rel="stylesheet" href="/static/css/style.css" />
