修改了一处错别字

--- a/pages/about.html
+++ b/pages/about.html
@@ -38,8 +38,8 @@
 <p>会修自来水、热水器，也会修家电、自行车、防盗门……自则就是自己能干的就不求别人。</p>
 <p>不是五毛，也不是美分。爱生活，不反社会。崇尚实事求是。</p>
 <p>正在入门的摄影爱好者，不会PS，反唯器材论。 </p>
-<p>智商中等偏下，玩不明三国杀以及各种复杂游戏，水平仅限于和邻居小孩斗地主。</p>
-<p>对电脑游戏有着天生的认知障碍，对CS、红警等少数老掉牙游戏有着特殊爱好。</p>
+<p>智商中等偏下，玩不明白三国杀以及各种复杂游戏，水平仅限于和邻居小孩斗地主。</p>
+<p>对电脑游戏有着天生的认知障碍，仅对CS、红警等少数老掉牙游戏有着特殊爱好。</p>
 <p>联系方式：zqqf16[at]gmail[dot]com</p>
 <p><strong>博客</strong></p>
 <p>为了写博客前前后后换了多次阵地，用过主机，买过VPS，现在来到Github。希望能够坚持下去，争取每周都有更新。</p>
