change the domain

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>穷折腾</title>
 	<link rel="stylesheet" href="/static/css/style.css" />
 	<link rel="stylesheet" href="/static/css/pygments.css" />
-	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://zqqf16.info/rss.xml" />
+	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://blog.zorro.im/rss.xml" />
 </head>
 <body>
     <div id="container">
