--- a/theme/base.html
+++ b/theme/base.html
@@ -44,6 +44,7 @@
        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
       ga('create', 'UA-41282906-2', 'zorro.im');
+	  ga('require', 'displayfeatures');
       ga('send', 'pageview');
   </script>
 </body>
