--- a/theme/base.html
+++ b/theme/base.html
@@ -11,7 +11,7 @@
   <link rel="icon" type="image/png" href="/static/img/favicon.png">
 </head>
 <body>
-    <div class="page-wrap">
+    <div <%block name="article_body"></%block> class="page-wrap">
         <section class="main-header regular">
             <div class="vertical-container">
                 <div class="wrapper clearfix">
